# cloud-meta

./: .env.example  .gitignore  PROGRESS.md  README.md  baseline.py  client.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  run_all_tasks.py  run_baseline.py  run_baseline_http.py  run_baseline_ws.py  run_task1_task2.py  test_environment.py  test_grader.py  test_simulation.py  test_task1_http.py  test_ws.py  test_ws_debug.py  workflow.md
graders/: grader.py
server/: Dockerfile  app.py  environment.py
tasks/: task1.json  task2.json  task3.json
tests/: test_environment.py  test_grader.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
ui/src/: App.jsx  index.css
